--- a/AutoServiceSystem/AutoServiceSystem/AutoServiceSystem.csproj
+++ b/AutoServiceSystem/AutoServiceSystem/AutoServiceSystem.csproj
@@ -6,4 +6,9 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Caliburn.Micro" Version="4.0.212" />
+    <PackageReference Include="Caliburn.Micro.Core" Version="4.0.212" />
+  </ItemGroup>
+
 </Project>
